[metadata]
name = tno.mpc.mpyc.statistics
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Secure Data Exploratory Analyses on Vertically Partitioned Data
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Typing :: Typed
    Topic :: Security :: Cryptography
    Topic :: Scientific/Engineering :: Information Analysis
license = Apache License, Version 2.0
license_files = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    secure learning
    statistics
    mean
    median
    min_max
    frequency
    contingency tables
    unique values
    covariance
    correlation
    interquartile range
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.mpyc.statistics/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/mpyc/statistics/0.1.1
    Source Code = https://github.com/TNO-MPC/mpyc.statistics
version = attr: tno.mpc.mpyc.statistics.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.mpyc.statistics
    tno.mpc.mpyc.statistics.test
    tno.mpc.mpyc.statistics.utils
zip_safe = False
install_requires =
    mpyc
    numpy
    tno.mpc.mpyc.stubs~=0.7.0
    typing_extensions
namespace_packages =
    tno
    tno.mpc
    tno.mpc.mpyc
include_package_data = True

[options.package_data]
tno.mpc.mpyc.statistics = py.typed

[options.extras_require]
gmpy =
    gmpy2>=2.1.0
tests =
    pytest
    pytest-asyncio
    pandas
